--- a/SecurePad.csproj
+++ b/SecurePad.csproj
@@ -28,6 +28,7 @@
     <None Remove=".gitignore" />
     <None Remove="Icon.ico" />
     <None Remove="LICENSE" />
+    <None Remove="README.md" />
     <None Remove="VERSION" />
   </ItemGroup>
 
