--- a/SecurePad/SecurePad.csproj
+++ b/SecurePad/SecurePad.csproj
@@ -21,6 +21,7 @@
     <None Remove="Resources\Assets\Delete.png" />
     <None Remove="Resources\Assets\Encrypt.png" />
     <None Remove="Resources\Assets\Logo.png" />
+    <None Remove="Resources\Assets\Open.png" />
     <None Remove="Resources\Assets\Paste.png" />
     <None Remove="Resources\Assets\Redo.png" />
     <None Remove="Resources\Assets\Save.png" />
@@ -39,6 +40,7 @@
     <Resource Include="Resources\Assets\Delete.png" />
     <Resource Include="Resources\Assets\Encrypt.png" />
     <Resource Include="Resources\Assets\Logo.png" />
+    <Resource Include="Resources\Assets\Open.png" />
     <Resource Include="Resources\Assets\Paste.png" />
     <Resource Include="Resources\Assets\Redo.png" />
     <Resource Include="Resources\Assets\Save.png" />
